# devloop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  MANIFEST.in  README.codexcli.md  README.md  pyproject.toml  setup.py
.tmp-app-server-schema/: codex_app_server_protocol.v2.schemas.json
docs/: CodexCLI-User-Guide.docx  codexcli-quickstart.md  codexcli-user-guide.md  configurable-workflow.md  devloop-logo.txt  hackathon-submission.md  harness-engineering-implementation-checklist.md  how-to-use.md  install-macos.md  install-ubuntu.md  install-windows.md  interactive-runner.md  mcp-setup.md  new-pc-setup.md  portable-application-shell.md  product-boundaries.md  release-checklist-v0.1.0.md  release-notes-v0.1.0.md  skills-and-agents.md  troubleshooting.md  usage.md  worktrees.md
install/: build-sql-mcp.ps1  build-sql-mcp.sh  devloop.ps1  devloop.sh  install-skills.ps1  install-skills.sh  record-demonstration.py  run-release-gates.ps1  run-release-gates.sh  run-release-recovery.ps1  run-release-recovery.sh  run-verification-tier.ps1  run-verification-tier.sh  setup-development.ps1  setup-development.sh  uninstall-devloop.ps1  uninstall-devloop.sh  verify-release-evidence.py  verify-release.py
issues/: 0001-run-two-review-instances-through-v2.md  0002-resume-and-rework-arbitrary-step-instances.md  0003-edit-and-persist-future-workflow-defaults.md  0004-build-and-reorder-the-primary-path.md  0005-edit-outcome-routes-and-typed-port-bindings.md  0006-choose-per-step-codex-execution-settings.md  0007-give-each-step-its-own-capabilities-and-guidance.md  0008-make-workflow-step-transformations-safe.md  0009-show-dynamic-progress-across-every-terminal-surface.md  0010-validate-and-release-the-configurable-workflow-experience.md  0011-reject-invalid-issue-dependency-graphs.md  0012-run-only-dependency-ready-issues.md  0013-resolve-root-blockers-with-five-fair-passes.md  0014-pause-runs-on-global-backend-failures.md  0015-validate-dependency-aware-scheduling-end-to-end.md  configurable-workflow-steps-issues.loop.md  configurable-workflow-steps-issues.loop.state.json  configurable-workflow-steps-issues.md  configurable-workflow-steps.md  dependency-aware-issue-scheduling-issues.md  dependency-aware-issue-scheduling.md  devloop.status.json  devloop.status.md
presets/: generic-minimal.json
prompts/: coder.md  qa.md  reviewer.md  self-improvement.md
schemas/: role-result.schema.json
tests/: terminal_safety.py  test_bundle_installer.py  test_catalog.py  test_chat_loop.py  test_cli_banners.py  test_cli_ui.py  test_clipboard.py  test_codex_execution_settings.py  test_gitrefs.py  (+23 more)
(+212 files in other folders)
